# twitter-profile-scorer

./: .editorconfig  .env.example  .gitignore  .gitmodules  .prettierignore  CLAUDE.md  Justfile  README.md  eslint.config.js  justfile  package.json  prettier.config.js  tsconfig.json
.github/workflows/: infra-deploy.yml
airflow/: .env.example  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.yaml  pyproject.toml  ruff.toml
airflow/alembic/: env.py  script.py.mako
airflow/alembic/versions/: 001_baseline.py  002_add_platform_column.py  003_rename_xapi_table.py
airflow/dags/: keyword_stats.py  llm_scoring.py  profile_scoring.py  profile_search.py
airflow/dags/audiences/: thelai_customers.v3.json
airflow/scripts/: test_llm_direct.py
airflow/tasks/: __init__.py  config.py  keywords.py  llm_scoring.py  search.py  stats.py  storage.py
airflow/tests/: __init__.py  conftest.py  test_dags.py  test_scoring_heuristic.py  test_scoring_llm.py  test_tasks_config.py  test_tasks_keywords.py  test_tasks_search.py
docs/: DEVLOG.md  README.md  airflow-deployment.md  architecture.md  data_pipeline.md  heuristic_has.md  llm_scoring.md  overall_evaluation.md  training_pipeline.md
infra/: .env.example  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml
infra/components/: __init__.py  billing.py  config.py  dashboard.py  database.py  datasets_bucket.py  ec2_airflow.py  lambda_function.py  sagemaker_llm.py  simple_dashboard.py  simple_vpc.py  sqs_queue.py  vpc.py
infra/tests/: __init__.py  conftest.py  helpers.py
infra/tests/e2e/: __init__.py  test_database.py  test_llm_scorer.py  test_orchestrator.py  test_query_twitter_api.py
lambdas/keyword-engine/: README.md  esbuild.config.mjs  package.json
lambdas/keyword-engine/src/: handler.ts
lambdas/keyword-stats-updater/: esbuild.config.mjs  package.json
lambdas/keyword-stats-updater/src/: handler.ts
lambdas/llm-scorer/: esbuild.config.mjs  package.json
lambdas/llm-scorer/src/: handler.ts
lambdas/orchestrator/: esbuild.config.mjs  package.json
lambdas/query-twitter-api/: README.md  package.json
scripts/: .gitignore  llm_researchscorer.ipynb  package.json  pyproject.toml  tsconfig.json
scripts/data/: curated_usernames.txt  customers.toon  thelai_customers.json  thelai_customers_system_prompt.md
scripts/dataset/: hand_picked.csv
scripts/dataset/batches/: batch-01.toon  batch-02.toon  batch-03.toon  batch-04.toon  batch-05.toon  batch-06.toon  batch-07.toon  batch-08.toon  batch-09.toon  batch-10.toon  batch-11.toon  batch-12.toon  batch-13.toon  batch-14.toon  batch-15.toon  batch-16.toon  batch-17.toon  batch-18.toon  batch-19.toon  batch-20.toon  batch-21.toon  batch-22.toon  batch-23.toon  batch-24.toon  batch-25.toon  batch-26.toon  batch-27.toon  batch-28.toon  batch-29.toon  batch-30.toon  batch-31.toon  batch-32.toon  batch-33.toon  batch-34.toon  batch-35.toon  batch-36.toon  batch-37.toon  batch-38.toon  batch-39.toon  batch-40.toon  (+59 more)
scripts/js_src/: add-keyword.ts  backfill-audience-versions.ts  env.ts  export-high-scores.ts  export-keyword-profiles.ts  export-low-scores.ts  export-random-profiles.ts  generate-hand-picked.ts  generate-highscore-batches.ts  generate-validated-leads-batches.ts  get-system-prompt.ts  handlabel-helper.ts  inspect-api-usage.ts  inspect-profiles.ts  score-all-pending.ts  score-by-keyword.ts  test-has-changes.ts  upload_curated_users.ts  validate-curated-leads.ts
scripts/migrations/: 001_score_to_label.sql
scripts/py_src/: __init__.py  analyze_curated_performance.py  analyze_model_scores.py  analyze_profile_scores.py  export_labeled_profiles.py  plot_has_distribution.py
scripts/training/: repack_model_ec2.sh  sagemaker_cli.py
(+8 files in other folders)
