[project]
name = "profile-scorer-airflow"
version = "0.1.0"
description = "Twitter/BlueSky profile scoring pipeline with Airflow 3.x"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "apache-airflow>=3.0.0",
    "utils",
    "db",
    "scoring",
    "search-profiles",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "pydantic>=2.0.0",
]

[tool.uv.workspace]
members = [
    "packages/utils",
    "packages/db",
    "packages/scoring",
    "packages/search_profiles",
]

[tool.uv.sources]
utils = { workspace = true }
db = { workspace = true }
scoring = { workspace = true }
search-profiles = { workspace = true }

# Note: Root workspace is not a buildable package (virtual)
# Individual packages in packages/ have their own build-system

# =============================================================================
# Mypy - Strict Type Checking
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["airflow.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["packages", "dags", "tasks"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
